# marketplace

./: .gitignore  CLAUDE.md  LICENSE  README.md  malloryapi  pyproject.toml
.claude/: Claude.md
.claude-plugin/: marketplace.json
.claude/skills/adversary-emulation/: SKILL.md
.claude/skills/image-gen/: SKILL.md
.claude/skills/image-gen/scripts/: image-gen.py
.claude/skills/intel-feed-finder/: SKILL.md  pyproject.toml
.claude/skills/intel-feed-finder/scripts/: rss_finder.py
.claude/skills/mallory-api/: SKILL.md  openapi-endpoints.md
.claude/skills/mallory-api/scripts/: client.py
.claude/skills/vulnerability-escalation/: SKILL.md
docs/: openapi-public.json
plugins/mallory/.claude-plugin/: plugin.json
plugins/mallory/skills/actor-tactic-timeline/: SKILL.md
plugins/mallory/skills/actor-tactic-timeline/assets/: fonts_css.txt
plugins/mallory/skills/actor-tactic-timeline/scripts/: README.md  tactic_timeline.py
plugins/mallory/skills/adversary-emulation-planning/: SKILL.md
plugins/mallory/skills/compromised-package-scan/: SKILL.md  reference.md
plugins/mallory/skills/compromised-package-scan/scripts/: scan.py
plugins/mallory/skills/daily-briefing/: SKILL.md
plugins/mallory/skills/daily-briefing/scripts/: briefing.py
plugins/mallory/skills/hunt-pack/: SKILL.md
plugins/mallory/skills/hunt-pack/assets/: regions.json
plugins/mallory/skills/hunt-pack/scripts/: build_hunt_pack.py
plugins/mallory/skills/mallory-api/: SKILL.md  reference.md
plugins/mallory/skills/mallory-api/scripts/: README.md  client.py
plugins/mallory/skills/mcp-sync/: SKILL.md
plugins/mallory/skills/vulnerability-escalation/: SKILL.md  reference.md
scripts/: validate_plugins.py  validate_skills.py
skills/: SKILL.md
(+3 files in other folders)
