[project]
name = "mallory-agent"
version = "0.1.0"
description = "Claude Code/OpenCode-compatible skills for security operations practitioners"
authors = [
    {name = "Jonathan Cran", email = "jcran@mallory.ai"},
]
dependencies = [
    "requests>=2.28.0",  # Shared by multiple skills
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
# intel-feed-finder skill dependencies
intel-feed-finder = [
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
]

# image-gen skill dependencies
image-gen = [
    "google-genai>=1.0.0",
]

# All optional dependencies
all = [
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "google-genai>=1.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false
