[project]
name = "mallory-marketplace"
version = "1.0.0"
description = "Claude Code plugin marketplace for security operations"
authors = [
    {name = "Jonathan Cran", email = "jcran@mallory.ai"},
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false
