[project]
name = "marketplace"
version = "1.1.0"
description = "Claude Code plugin marketplace for Mallory - plugins for cti & security operations"
authors = [
    {name = "Jonathan Cran", email = "jcran@mallory.ai"},
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false
